force-app/main/default/objects/COI__c/COI__c.object-meta.xml
<CustomObject>
    <description>Center of Influence Object</description>
    <label>COI</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>COI Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>COIs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>