force-app/main/default/objects/COI__c/fields/ABA_Teleconference__c.field-meta.xml
<CustomField>
    <fullName>ABA_Teleconference__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ABA Teleconference</label>
    <type>Checkbox</type>
</CustomField>