force-app/main/default/objects/COI__c/fields/COI_Birthday_DD_MM__c.field-meta.xml
<CustomField>
    <fullName>COI_Birthday_DD_MM__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Used to capture the day and month of the COI&#39;s birthday.  Use for birthday card.  Limited to 5 characters in the format DD/MM</inlineHelpText>
    <label>COI Birthday (DD/MM)</label>
    <length>5</length>
    <type>Text</type>
</CustomField>