force-app/main/default/objects/COI__c/fields/COI_Fields_Incomplete__c.field-meta.xml
<CustomField>
    <fullName>COI_Fields_Incomplete__c</fullName>
    <formula>OR (
   ISBLANK(TEXT( COI_Type__c )),
    ISBLANK( Email__c ),
       ISBLANK( Phone__c )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>COI Fields Incomplete</label>
    <type>Checkbox</type>
</CustomField>