force-app/main/default/objects/COI__c/fields/COI_Type__c.field-meta.xml
<CustomField>
    <fullName>COI_Type__c</fullName>
    <label>COI Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CPA</fullName>
            </value>
            <value>
                <fullName>Insurance Agent</fullName>
            </value>
            <value>
                <fullName>Real Estate Agent</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Bank Customer</fullName>
            </value>
            <value>
                <fullName>Builder</fullName>
            </value>
            <value>
                <fullName>Title Company Rep</fullName>
            </value>
            <value>
                <fullName>Financial Planner</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Nonprofit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>