force-app/main/default/objects/COI__c/fields/Colorado_Cannon_Teleconference__c.field-meta.xml
<CustomField>
    <fullName>Colorado_Cannon_Teleconference__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Colorado Cannon Teleconference</label>
    <type>Checkbox</type>
</CustomField>