force-app/main/default/objects/COI__c/fields/Commercial_Lending_RM__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Lending_RM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commercial Lending RM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>COIs2</relationshipName>
    <type>Lookup</type>
</CustomField>