force-app/main/default/objects/COI__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Company</label>
    <length>90</length>
    <type>Text</type>
</CustomField>