force-app/main/default/objects/COI__c/fields/Current_FNB_Customer__c.field-meta.xml
<CustomField>
    <fullName>Current_FNB_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current FNB Customer</label>
    <type>Checkbox</type>
</CustomField>