force-app/main/default/objects/COI__c/fields/Fremont_Cannon_Teleconference__c.field-meta.xml
<CustomField>
    <fullName>Fremont_Cannon_Teleconference__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fremont Cannon Teleconference</label>
    <type>Checkbox</type>
</CustomField>