force-app/main/default/objects/COI__c/fields/Holiday_Cards__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Cards__c</fullName>
    <label>Holiday Cards</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>