force-app/main/default/objects/COI__c/fields/I_am_Owner_or_Related_Owner__c.field-meta.xml
<CustomField>
    <fullName>I_am_Owner_or_Related_Owner__c</fullName>
    <formula>OR(Owner:User.Id=$User.Id, Related_Owner_1__r.Id=$User.Id, Related_Owner_2__r.Id=$User.Id, Related_User__r.Id=$User.Id)</formula>
    <label>I am Owner or Related Owner</label>
    <type>Checkbox</type>
</CustomField>