force-app/main/default/objects/COI__c/fields/Investment_Communcation_Email__c.field-meta.xml
<CustomField>
    <fullName>Investment_Communcation_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Investment Communcation Email</label>
    <type>Checkbox</type>
</CustomField>