force-app/main/default/objects/COI__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <formula>Name + Company__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Key</label>
    <type>Text</type>
</CustomField>