force-app/main/default/objects/COI__c/fields/Mail_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Mail_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mail Opt Out</label>
    <type>Checkbox</type>
</CustomField>