force-app/main/default/objects/COI__c/fields/Market_Summit__c.field-meta.xml
<CustomField>
    <fullName>Market_Summit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Market Summit</label>
    <type>Checkbox</type>
</CustomField>