force-app/main/default/objects/COI__c/fields/Omaha_Cannon_Teleconference__c.field-meta.xml
<CustomField>
    <fullName>Omaha_Cannon_Teleconference__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Omaha Cannon Teleconference</label>
    <type>Checkbox</type>
</CustomField>