force-app/main/default/objects/COI__c/fields/Owner_or_Related_Owner_in_My_Profile__c.field-meta.xml
<CustomField>
    <fullName>Owner_or_Related_Owner_in_My_Profile__c</fullName>
    <formula>OR( Owner:User.ProfileId = $User.ProfileId, Related_Owner_1__r.ProfileId = $User.ProfileId, Related_Owner_2__r.ProfileId = $User.ProfileId)</formula>
    <label>Owner or Related Owner in My Profile</label>
    <type>Checkbox</type>
</CustomField>