force-app/main/default/objects/COI__c/fields/Owner_Relationship_To_Me__c.field-meta.xml
<CustomField>
    <fullName>Owner_Relationship_To_Me__c</fullName>
    <formula>Owner:User.Managerial_Relationship__c</formula>
    <label>Owner Manager Relationship To Me</label>
    <type>Text</type>
</CustomField>