force-app/main/default/objects/COI__c/fields/Provides_Estate_Planning__c.field-meta.xml
<CustomField>
    <fullName>Provides_Estate_Planning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Provides Estate Planning</label>
    <type>Checkbox</type>
</CustomField>