force-app/main/default/objects/COI__c/fields/Related_Business_Contact__c.field-meta.xml
<CustomField>
    <fullName>Related_Business_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Business Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>COIs</relationshipLabel>
    <relationshipName>COIs</relationshipName>
    <type>Lookup</type>
</CustomField>