force-app/main/default/objects/COI__c/fields/Related_Owner_2__c.field-meta.xml
<CustomField>
    <fullName>Related_Owner_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Owner 2</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.User_Profile_for_Reporting__c</field>
            <operation>equals</operation>
            <value>Mortgage</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>COIs1</relationshipName>
    <type>Lookup</type>
</CustomField>