force-app/main/default/objects/COI__c/fields/Related_Person_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Person_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Account or Person Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>COIs</relationshipLabel>
    <relationshipName>COIs</relationshipName>
    <type>Lookup</type>
</CustomField>