force-app/main/default/objects/COI__c/fields/Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Street_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Street Address</label>
    <length>90</length>
    <type>Text</type>
</CustomField>