force-app/main/default/objects/COI__c/fields/User_Market_for_Reporting__c.field-meta.xml
<CustomField>
    <fullName>User_Market_for_Reporting__c</fullName>
    <formula>TEXT(Owner:User.User_s_Market__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Market for Reporting</label>
    <type>Text</type>
</CustomField>