force-app/main/default/objects/COI__c/fields/User_Profile_for_COI_Reporting__c.field-meta.xml
<CustomField>
    <fullName>User_Profile_for_COI_Reporting__c</fullName>
    <formula>Owner:User.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Profile for COI Reporting</label>
    <type>Text</type>
</CustomField>