force-app/main/default/objects/COI__c/fields/Wealth_Estate_Planning_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>Wealth_Estate_Planning_Newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wealth Estate Planning Newsletter</label>
    <type>Checkbox</type>
</CustomField>