force-app/main/default/objects/COI__c/fields/Wealth_Holiday_Cards__c.field-meta.xml
<CustomField>
    <fullName>Wealth_Holiday_Cards__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wealth Holiday Cards</label>
    <type>Checkbox</type>
</CustomField>