force-app/main/default/objects/COI__c/validationRules/Prevent_unauth_change_to_Related_Owner_1.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_unauth_change_to_Related_Owner_1</fullName>
    <active>true</active>
    <description>Prevent Mortgage users from changing the Related Owner 1 field from an existing value to their own name.  They can still update blank fields to include their name.</description>
    <errorConditionFormula>And( 
ischanged( Related_Owner_1__c), 
Not(isblank(priorvalue( Related_Owner_1__c))), 
(Related_Owner_1__c) = $User.Id)</errorConditionFormula>
    <errorDisplayField>Related_Owner_1__c</errorDisplayField>
    <errorMessage>You cannot replace this value with your own name. Please check with management.</errorMessage>
</ValidationRule>