force-app/main/default/objects/COI__c/validationRules/Prevent_unauth_change_to_Related_Owner_2.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_unauth_change_to_Related_Owner_2</fullName>
    <active>true</active>
    <description>If a field is already populated, don&#39;t allow a Mortgage user to populate their own name in the Related owner 2 field.</description>
    <errorConditionFormula>And(
ischanged( Related_Owner_2__c),
Not(isblank(priorvalue( Related_Owner_2__c))),
(Related_Owner_2__c) = $User.Id)</errorConditionFormula>
    <errorDisplayField>Related_Owner_2__c</errorDisplayField>
    <errorMessage>You cannot replace this value with your own name.  Please check with management.</errorMessage>
</ValidationRule>